<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:actionViewClass="androidx.appcompat.widget.SearchView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        android:showAsAction="always|collapseActionView"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search" />


    <item
        android:id="@+id/sort_group"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        app:showAsAction="ifRoom"
        android:title="@string/sort_group">

        <menu>
            <item
                android:id="@+id/action_sort_by_name_a_z"
                android:icon="@drawable/ic_sort"
                android:orderInCategory="1"
                android:showAsAction="ifRoom"
                app:showAsAction="ifRoom"
                android:title="@string/sort_by_name_a_z" />


            <item
                android:id="@+id/action_sort_by_name_z_a"
                android:icon="@drawable/ic_sort"
                android:orderInCategory="2"
                android:showAsAction="ifRoom"
                app:showAsAction="ifRoom"
                android:title="@string/sort_by_name_z_a" />

            <item
                android:id="@+id/action_sort_by_date_a_z"
                android:icon="@drawable/ic_sort"
                android:orderInCategory="3"
                android:showAsAction="ifRoom"
                app:showAsAction="ifRoom"
                android:title="@string/sort_by_date_a_z" />


            <item
                android:id="@+id/action_sort_by_date_z_a"
                android:icon="@drawable/ic_sort"
                android:orderInCategory="4"
                android:showAsAction="ifRoom"
                app:showAsAction="ifRoom"
                android:title="@string/sort_by_date_z_a" />

        </menu>


    </item>


</menu>