<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.Fragment_Splash_Screen">


        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:foreground="@drawable/protection_background">
        </FrameLayout>


        <ImageView
            android:id="@+id/app_logo_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_logo_dsc"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_app_logo"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/app_name_text"
            app:layout_constraintEnd_toStartOf="@+id/app_name_text"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/app_name_text" />

        <TextView
            android:id="@+id/app_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:letterSpacing=".1"
            android:fontFamily="@font/josefinsans_medium"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/Headline4"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/slogan_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/app_logo_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35000002"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/slogan_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/slogan"
            android:textAppearance="@style/Subtitle1"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name_text"
            app:layout_constraintVertical_bias="0.0" />


        <ProgressBar
            android:id="@+id/progressBar2"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginBottom="16dp"
            android:indeterminateBehavior="repeat"
            android:indeterminateTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>